# reddit_newsletter

./: .gitignore  LICENSE  README.md  ids.json  main.py  openrouter.py  pyproject.toml  reddit.py  requirements.txt  zohomail.py
.github/workflows/: newsletter.yml
