[tool.poetry]
name = "reddit_newsletter"
version = "0.1.0"
description = ""
authors = ["Aaron Kossler <aaron.kossler@zohomail.eu>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
openai = "^1.52.2"
sib-api-v3-sdk = "^7.6.0"
requests = "^2.32.3"
praw = "^7.8.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"